--- a/medsales/.settings/org.eclipse.wst.common.component
+++ b/medsales/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources-wildfly82-remote"/>
+        <dependent-module archiveName="qbeasy-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qbeasy/qbeasy">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="medsales"/>
         <property name="java-output-path" value="/medsales/target/classes"/>
     </wb-module>
