--- a/medsales/medsales-app/.settings/org.eclipse.wst.common.component
+++ b/medsales/medsales-app/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,9 @@
         <dependent-module archiveName="qbeasy-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qbeasy/qbeasy">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="testeasy-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/testeasy/testeasy">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/medsales/target/classes"/>
         <property name="context-root" value="medsales-app"/>
     </wb-module>
