--- a/medsales/medsales-app/.settings/org.eclipse.wst.common.component
+++ b/medsales/medsales-app/.settings/org.eclipse.wst.common.component
@@ -11,6 +11,9 @@
         <dependent-module archiveName="testeasy-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/testeasy/testeasy">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="medsales-api-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/medsales-api/medsales-api">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/medsales/target/classes"/>
         <property name="context-root" value="medsales-app"/>
     </wb-module>
