--- a/medsales/medsales-app/src/main/webapp/templates/default/main.xhtml
+++ b/medsales/medsales-app/src/main/webapp/templates/default/main.xhtml
@@ -19,13 +19,8 @@
 
 	<f:facet name="middle">
 		<h:outputStylesheet name="bootstrap/css/bootstrap.css" />
-
-		<h:outputStylesheet name="css/dashboard.css" />
-
-		<script
-			src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" />
-
-		<h:outputScript name="bootstrap/js/bootstrap.js" />
+		<h:outputStylesheet name="css/jasny-bootstrap.min.css" />
+		<h:outputStylesheet name="css/navmenu.css" />
 	</f:facet>
 
 	<f:facet name="last">
@@ -35,8 +30,22 @@
 </h:head>
 
 <h:body>
+
 	<ui:include src="header.xhtml" />
-	<ui:include src="content.xhtml" />
+
+	<div class="container">
+		<ui:include src="content.xhtml" />
+	</div>
+	<!-- /.container -->
+
+
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" />
+	<h:outputScript name="bootstrap/js/bootstrap.js" />
+	<h:outputScript name="js/jasny-bootstrap.min.js" />
 </h:body>
 </html>
 
