--- a/medsales/medsales-app/src/main/webapp/templates/default/main.xhtml
+++ b/medsales/medsales-app/src/main/webapp/templates/default/main.xhtml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui"
 	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
 <h:head>
@@ -14,7 +11,7 @@
 		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>Sales Medicamentos</title>
+		<title>SalesMed #{empty param_pageTitle ? '' : ' - '.concat(param_pageTitle)}</title>
 	</f:facet>
 
 	<f:facet name="middle">
@@ -25,6 +22,13 @@
 
 	<f:facet name="last">
 		<h:outputStylesheet name="css/font-awesome.css" />
+		<h:outputStylesheet name="css/medsales.css" />
+		<style type="text/css">
+			.ui-growl {
+				top: 51px;
+				z-index: 9999;
+			}
+		</style>
 	</f:facet>
 
 </h:head>
@@ -42,8 +46,7 @@
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" />
 	<h:outputScript name="bootstrap/js/bootstrap.js" />
 	<h:outputScript name="js/jasny-bootstrap.min.js" />
 </h:body>
