--- a/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
+++ b/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
@@ -11,13 +11,9 @@
 	<c:set var="root" value="#{request.contextPath}" />
 
 	<ul class="nav navmenu-nav">
-		<li class="active"><a href="#{root}">Resumo de Movimentações</a></li>
+		<li><a href="#{root}">Início</a></li>
+		<li><a href="#{root}/movimentacao/ultimas.xhtml">Últimas de Movimentações</a></li>
 		<li><a href="#{root}/cadastros/produto/produto.xhtml">Produtos</a></li>
-		<!--         
-        <li><a href="../navmenu-push/">Push</a></li>
-        <li><a href="../navmenu-reveal/">Reveal</a></li>
-        <li><a href="../navbar-offcanvas/">Off canvas navbar</a></li>
-         -->
 	</ul>
 	<ul class="nav navmenu-nav">
 		<li class="dropdown"><a href="#" class="dropdown-toggle"
