Implementando Cadstro de Entrada

--- a/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
+++ b/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
@@ -12,8 +12,9 @@
 
 	<ul class="nav navmenu-nav">
 		<li><a href="#{root}">Início</a></li>
-		<li><a href="#{root}/movimentacao/ultimas.xhtml">Últimas de Movimentações</a></li>
+		<li><a href="#{root}/movimentacao/movimentacoes.xhtml">Últimas de Movimentações</a></li>
 		<li><a href="#{root}/cadastros/produto/produto.xhtml">Produtos</a></li>
+		<li><a href="#{root}/movimentacao/entrada.xhtml">Entrada</a></li>
 	</ul>
 	<ul class="nav navmenu-nav">
 		<li class="dropdown"><a href="#" class="dropdown-toggle"
