--- a/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
+++ b/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
@@ -12,8 +12,8 @@
 
 	<ul class="nav navmenu-nav">
 		<li><a href="#{root}">Início</a></li>
-		<li><a href="#{root}/movimentacao/movimentacoes.xhtml">Últimas de Movimentações</a></li>
 		<li><a href="#{root}/cadastros/produto/produto.xhtml">Produtos</a></li>
+		<li><a href="#{root}/movimentacao/movimentacoes.xhtml">Movimentações</a></li>
 		<li><a href="#{root}/movimentacao/entrada.xhtml">Entrada</a></li>
 	</ul>
 	<ul class="nav navmenu-nav">
