--- a/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
+++ b/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
@@ -15,6 +15,7 @@
 		<li><a href="#{root}/cadastros/produto/produto.xhtml">Produtos</a></li>
 		<li><a href="#{root}/movimentacao/movimentacoes.xhtml">Movimentações</a></li>
 		<li><a href="#{root}/movimentacao/entrada.xhtml">Entrada</a></li>
+		<li><a href="#{root}/movimentacao/saida.xhtml">Saída</a></li>
 	</ul>
 	<ul class="nav navmenu-nav">
 		<li class="dropdown"><a href="#" class="dropdown-toggle"
