Implementado o fluxo inicial de CIclo e Investimento, de forma ainda indepente.

--- a/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
+++ b/medsales/medsales-app/src/main/webapp/templates/default/leftMenu.xhtml
@@ -13,9 +13,11 @@
 	<ul class="nav navmenu-nav">
 		<li><a href="#{root}">Início</a></li>
 		<li><a href="#{root}/cadastros/produto/produto.xhtml">Produtos</a></li>
-		<li><a href="#{root}/movimentacao/movimentacoes.xhtml">Movimentações</a></li>
-		<li><a href="#{root}/movimentacao/entrada.xhtml">Entrada</a></li>
-		<li><a href="#{root}/movimentacao/saida.xhtml">Saída</a></li>
+		<li><a href="#{root}/movimento/estoque/movimentos.xhtml">Movimentações</a></li>
+		<li><a href="#{root}/movimento/estoque/entrada.xhtml">Entrada</a></li>
+		<li><a href="#{root}/movimento/estoque/saida.xhtml">Saída</a></li>
+		<li><a href="#{root}/movimento/valor/ciclo/ciclo.xhtml">Ciclos</a></li>
+		<li><a href="#{root}/movimento/valor/investimento/investimento.xhtml">Investimento</a></li>
 	</ul>
 	<ul class="nav navmenu-nav">
 		<li class="dropdown"><a href="#" class="dropdown-toggle"
