--- a/medsales/medsales-app/.settings/org.eclipse.wst.common.component
+++ b/medsales/medsales-app/.settings/org.eclipse.wst.common.component
@@ -5,10 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources-wildfly82-remote"/>
-        <dependent-module archiveName="qbeasy-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qbeasy/qbeasy">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="medsales-api-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/medsales-api/medsales-api">
+        <dependent-module archiveName="qbeasy-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qbeasy/qbeasy">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/medsales/target/classes"/>
